[package]
name = "easycrm-api"
version = "0.1.0"
authors = ["gz <l2241883@gmail.com>"]
edition = "2018"


[dependencies]
rocket = { version = "0.4.2", default-features = false }
serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.6", features = ["mysql","chrono"] }
diesel_codegen = { version = "*", features = ["mysql"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "0.10.0"
md5 = "0.7.0"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]