[package]
name = "server"
version = "0.1.0"
authors = ["gz <l2241883@gmail.com>"]
edition = "2018"


[dependencies]
diesel_migrations = "1.4.0"
diesel = { version = "1.4.3", features = ["sqlite"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json"] }
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
